Implement get and edit user details - Add endpoint to get single user details - Add endpoint to edit single user details - Add endpoint to get all member details
